Formulario(Login/ Registrar Socio/ Usuario), Falta conexión con la aplicación. Version web resonsive

--- a/web/WEB-INF/jspf/topLogin.jspf
+++ b/web/WEB-INF/jspf/topLogin.jspf
@@ -2,23 +2,50 @@
 <%@ page pageEncoding="UTF-8" %>
 
 <div> 
-    <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner"> 
-        <div class="container"> <div class="navbar-header">
-                <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-navbar" aria-controls="bs-navbar" aria-expanded="false"> 
-                    <span class="sr-only">Toggle navigation</span> 
-                    <span class="icon-bar"></span> <span class="icon-bar"></span> 
-                    <span class="icon-bar"></span> </button> 
-                <a href="" class="navbar-brand">Iniciar sesión</a> </div>
-            <nav id="bs-navbar" class="collapse navbar-collapse"> 
-                <ul class="nav navbar-nav"> 
-                    <li class="active"> 
-                        <a href="">Getting started</a> </li> 
-                    <li> <a href="../css/">CSS</a> </li>
-                    <li> <a href="../components/">Components</a> 
-                    </li> <li> <a href="../javascript/">JavaScript</a>
-                    </li> <li> <a href="../customize/">Customize</a> 
-                    </li> </ul> <ul class="nav navbar-nav navbar-right">
-                </ul> </nav> </div> </header>
+<header>
+		<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navegacion-fm">
+						<span class="sr-only">Desplegar / Ocultar Menu</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a href="#" class="navbar-brand">FalconMasters</a>
+				</div>
+				<!-- Inicia Menu -->
+				<div class="collapse navbar-collapse" id="navegacion-fm">
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="#">Inicio</a></li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
+								Categorias <span class="caret"></span>
+							</a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="#">Categoria #1</a></li>
+								<li class="divider"></li>
+								<li><a href="#">Categoria #2</a></li>
+								<li><a href="#">Categoria #3</a></li>
+								<li><a href="#">Categoria #4</a></li>
+							</ul>
+						</li>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">Contacto</a></li>
+					</ul>
+
+					<form action="" class="navbar-form navbar-right" role="search">
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="buscar">
+						</div>
+						<button type="submit" class="btn btn-primary">
+							<span class="glyphicon glyphicon-search"></span>
+						</button>
+					</form>
+				</div>
+			</div>
+		</nav>
+	</header>
     <div class="header">
         Fondo ACIS 
     </div>
@@ -34,5 +61,5 @@
             
         </div>
     </div>
-</div>
+
 
