--- a/web/css/base1.css
+++ b/web/css/base1.css
@@ -1,11 +1,48 @@
-
-.boxlogin{
-    border-radius:4px;
-    margin: 100px auto;
-    width: 320px;
-    -webki-border-radius:4px;
-    -moz-border-radius: 4px;
+/* -- HEADER -- */
+.navbar {
+	margin-bottom: 0;
 }
-input [type="submit"]{
-    margin-top: 14px;
+
+.jumbotron {
+	background:#428BCA;
+	color:#fff;
+	padding:20px 0;
+}
+
+/* -- POST -- */
+.main {
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+.post {
+	padding-bottom:20px;
+	margin-bottom:20px;
+	border-bottom:1px solid #999;
+}
+
+.post .post-title a {
+	color:#333;
+}
+
+.post .thumb {
+	margin-right:10px;
+	width:40%;
+}
+
+.post .thumb img {
+	width:100%;
+}
+
+.post .contenedor-botones {
+	width: 100%;
+}
+
+/* -- Media Querie -- */
+@media screen and (max-width: 768px) {
+	.post .thumb {
+		width: 100%;
+		margin-bottom: 20px;
+		margin-right: 0;
+	}
 }
